--- a/QUIENES SOMOS/proposito.css
+++ b/QUIENES SOMOS/proposito.css
@@ -72,6 +72,7 @@
     font-size: 1.1rem;
     line-height: 1.6;
     color: rgba(255, 255, 255, 0.85);
+    text-align: justify;
 }
 
 .prop-text strong {
